2008-03-19  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/main.c: Add a missing header file.

	* backends/xim/connection.c (xim_connection_forward_event):
	Fix a segfault when the major-opcode is more than expects.

	* imsettings/imsettings-request.c (imsettings_request_change_to_with_signal):
	Fix a typo.

	* src/factory.c (imsettings_manager_real_start_im): send a change to
	XIM server too.
	(imsettings_manager_real_stop_im): likewise.

	* imsettings/imsettings-request.c (imsettings_request_change_to_with_signal):
	new to send a ChangeTo signal. particularly for XIM server.

	* imsettings/backends/Makefile.am: Add a rule to build xim support.

	* imsettings/backends/xim/connection.[ch]:
	* imsettings/backends/xim/main.c:
	* imsettings/backends/xim/server.[ch]:
	* imsettings/backends/xim/utils.[ch]:
	* imsettings/backends/xim/Makefile.am: Initial commit to support XIM.

	* imsettings/imsettings/imsettings.h: Add dbus interface for XIM.

	* imsettings/Makefile.am: Make it more better to generate code from glib-genmarshal.

2008-03-17  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_info.c (imsettings_info_manager_real_get_current_user_im):
	Get back current system IM if current user IM is NULL.

2008-03-12  Akira TAGOH  <tagoh@redhat.com>

	* backends/xfce/imsettings_plugin.c: Mcs plugin for imsettings support.

2008-03-11  Akira TAGOH  <tagoh@redhat.com>

	* backends/gconf/main.c: Add a prototype declaration for
	imsettings_gconf_get_type() and imsettings_gconf_new() to shut up
	a compiler warning.

	* src/factory.c: Add a prototype declaration for
	imsettings_manager_get_type() to shut up a compiler warning.

	* src/factory_info.c: Add a prototype declaration for
	imsettings_info_manager_get_type() to shut up a compiler warning.

	* imsettings/Makefile.am ($(srcdir)/imsettings-marshal.c): Add #include
	"imsettings-marshal.h" to shut up a compiler warning.

2008-03-07  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-request.h: Fix a typo.
